feat: adicionando a configuração do banco de dados no application.yml

--- a/ms-doacao/src/main/resources/application.yml
+++ b/ms-doacao/src/main/resources/application.yml
@@ -1,3 +1,13 @@
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/gerenciamento-de-doacao-de-sangue
+    username: postgres
+    password: 123
+    driver-class-name: org.postgresql.Driver
+  application:
+    name: ms-doacao
+
+
 server:
   port: 0
 
