--- a/ms-doacao/src/main/resources/application.yml
+++ b/ms-doacao/src/main/resources/application.yml
@@ -6,6 +6,8 @@ spring:
     driver-class-name: org.postgresql.Driver
   application:
     name: ms-doacao
+  main:
+    allow-bean-definition-overriding: true
 
 
 server:
