--- a/ms-doacao/src/main/resources/application.yml
+++ b/ms-doacao/src/main/resources/application.yml
@@ -4,6 +4,11 @@ spring:
     username: postgres
     password: 123
     driver-class-name: org.postgresql.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
   application:
     name: ms-doacao
   main:
