feat: adicionando a fila: emitir-estoque-de-sangue - application.yml

--- a/ms-doacao/src/main/resources/application.yml
+++ b/ms-doacao/src/main/resources/application.yml
@@ -26,3 +26,7 @@ eureka:
   instance:
     hostname: localhost
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+
+mq:
+  queues:
+    emitir-estoque-de-sangue: emitir-estoque-de-sangue
