--- a/ms-doacao/src/main/resources/application.yml
+++ b/ms-doacao/src/main/resources/application.yml
@@ -1,4 +1,9 @@
 spring:
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
   datasource:
     url: jdbc:postgresql://localhost:5432/gerenciamento-de-doacao-de-sangue
     username: postgres
